homelab/apps/twonote_timetracking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twonote-timetracking
  labels:
    name: twonote-timetracking
