homelab/apps/twonote_timetracking/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twonote-timetracking
  labels:
    app: twonote-timetracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twonote-timetracking
  template:
    metadata:
      labels:
        app: twonote-timetracking
    spec:
      containers:
        - name: twonote
          image: ghcr.io/di0ik/gitlab-timetracking-analysis:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
---
